# chatBI

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  test_heatmap.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_hybrid.py
backend/app/: config.py  database.py  main.py  migrations.py  models.py  models_meta.py  prompt_loader.py  schema_meta.py  schemas.py  seed.py  seed_dw.py
backend/app/agent/: __init__.py  context.py  graph.py  llm.py  state.py  streaming.py
backend/app/api/: auth.py  chat.py  conversations.py  dashboard.py  datasource.py  dependencies.py  deps.py  export.py  feedback.py  meta.py  tasks.py
backend/app/clients/: __init__.py  db_client_manager.py  embedding_client_manager.py  es_client_manager.py  llm_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
backend/app/conf/: __init__.py  app_config.py  meta_config.py
backend/app/core/: context.py  lifespan.py  log.py
backend/app/services/: auth.py  (+21 more)
backend/conf/: app_config.yaml  meta_config.yaml
backend/data/: schema_vectors.pkl
backend/prompts/: correct_sql.prompt  extend_keywords.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_metric_recall.prompt  extend_keywords_for_value_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  fix_sql.prompt  generate_sql.prompt  sql_system.prompt  summary.prompt
backend/tests/: __init__.py  conftest.py  test_auth.py  test_cache_v2.py  test_chart.py  test_chat_stream.py  test_http.py  test_schema_search.py  test_sql_safety.py
(+81 files in other folders)
