[project]
name = "chatbi-backend"
version = "0.1.0"
description = "ChatBI FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "SQLAlchemy==2.0.35",
    "openai>=1.60,<2",
    "python-dotenv==1.0.1",
    "sqlparse==0.5.1",
    "pandas==2.2.3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
