[project]
name = "chatbi-backend"
version = "0.4.0"
description = "ChatBI FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "SQLAlchemy==2.0.35",
    "openai>=1.60,<2",
    "python-dotenv==1.0.1",
    "sqlparse==0.5.1",
    "pandas==2.2.3",
    "bcrypt>=4.2,<5",
    "prometheus-client>=0.21,<1",
    "structlog>=24.4,<26",
    "psycopg2-binary>=2.9,<3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0,<7",
    "httpx>=0.27,<1",
    "ruff>=0.8,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B007", "B008", "B904", "B905", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-fail-under=50"
